--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "My capstone project of BrainStation SE bootcamp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch index.js"
+    "start": "node --watch index.js",
+    "migrate": "knex migrate:latest",
+    "down": "knex migrate:down",
+    "rollback": "knex migrate:rollback",
+    "seed": "knex seed:run"
   },
   "keywords": [
     "express",
@@ -17,6 +20,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "mysql2": "^3.4.0"
   }
 }
